lib: Always send "default-adapter-powered"

Fix sending of default-adapter-powered in the case that the default
adapter is being disabled.

https://bugzilla.gnome.org/show_bug.cgi?id=782530